# schema-driven-policy-workflow-agent

./: LICENSE  Makefile  README.md  SUBMISSION.md  eval_runner.py  pyproject.toml
.agents/skills/workflow-policy-review/: SKILL.md
.github/workflows/: ci.yml
app/: adk_agent.py  agent.py  contract_loader.py  message_formatter.py  models.py  policy_engine.py  schema_validator.py
examples/: auto_approved_report.json  blocked_local_email.json  review_required_email.json  schema_invalid_missing_request_id.json  unknown_action.json
mcp/: client_demo.py  server.py
policies/: policies.yaml
schemas/: action_contracts.yaml  workflow_contracts.yaml
scripts/: demo.py
specs/: behavior-scenarios.feature  capstone-spec.md  evaluation-cases.yaml
tests/: conftest.py  test_adk_agent.py  test_agent.py  test_contract_loader.py  test_eval_cases.py  test_evaluation_order.py  test_message_formatter.py  test_policy_engine.py  test_schema_validator.py
