[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-driven-policy-workflow-agent"
version = "0.1.0"
description = "Pre-execution governance layer: deterministic policy engine for workflow action requests, with the LLM kept outside the authority path."
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "mcp>=1.0",
    "google-adk>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
